# amorfati

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  iDontUnderstandOneShit.md
assets/: nietzsche.avif
assets/shaders/: test.frag  test.vert
dependencies/glad/include/glad/: gl.h
src/: main.cpp
src/amorfati/core/: Shader.cpp  Shader.h  Window.cpp  Window.h
src/amorfati/factories/: CreateVAO.cpp  CreateVAO.h  CreateVertFrag.cpp  CreateVertFrag.h  createVertFrag.cpp
src/amorfati/math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
